syntax = "proto3";

import "google/protobuf/struct.proto";

package slicer.v1;

option go_package = "github.com/godev90/slicer/pb;slicerpb";

message QueryOptions {
  uint32 page = 1;
  uint32 limit = 2;
  repeated SortField sort = 3;
  SearchQuery search = 4;
  repeated string select = 5;
  map<string, string> filters = 6;
  repeated ComparisonFilter comparisons = 7;
}

message SortField {
  string field = 1;
  bool desc = 2;
}

message SearchQuery {
  repeated string fields = 1;
  string keyword = 2;
}

message ComparisonFilter {
  string field = 1;
  string op = 2;
  string value = 3;
}

message PageResult {
  int64 total = 1;
  int32 page = 2;
  int32 limit = 3;
  repeated google.protobuf.Struct items = 4;
}